# binana

./: .clang-format  .gitattributes  .gitignore  CheatEngineScriptsInfo.md  Makefile  README.md  go.mod  go.sum
.github/workflows/: push.yml
3.3.5a/ida/: import.idc  import_data_types.idc  import_symbols.idc
3.3.5a/include/: main.h
3.3.5a/symbol/: main.sym
3.3.5a/x32dbg/: game.dd32  types.json
cheatengine/: StructDef.lua  cgcontainer.lua  cgcorpse.lua  cgitem.lua  cgobject.lua  cgplayer.lua  cgunit.lua  cmaparea.lua  cmapbaseobj.lua  cmapchunk.lua  cmapentity.lua  cmapobjdef.lua  cmapobjdefgroup.lua  cmapstaticentity.lua  load_bagpack_item.lua  load_mouseover_corpse.lua  load_player.lua  load_player_container.lua  load_unit_target.lua
cmake/: CMakeLists.txt
db/: samples.parquet  tokens.parquet
ghidra/: ExportSymbolsScript.py  MSVCExportSymbolsScript.py  SuperExportSymbolsScript.py  SuperImportSymbolsScript.py  YankCurrentFunctionSymbol.py
go/app/: app.go
go/db/: sample.go  token.go
go/pdbconv/: db.go  xml.go
go/profile/: compile_artifacts.go  compile_ghidra_artifacts.go  compile_idapro_artifacts.go  compile_x64dbg_artifacts.go  compile_x64dbg_database.go  compile_x64dbg_types.go  generate.go  ida_generate_files.go  info.go  open.go  x64dbg.go  x64dbg_generate_database.go  x64dbg_generate_types.go
go/stringrecovery/: stringrecovery.go
go/symbols/: error.go  loader.go  symbol.go  (+2 more)
ida/: export_symbols.idc
script/: build-ce-loader-script  build-cheatengine-scripts  compile-symbols  setup-clangd-profile  sort-file  sort-symbol-file  tidy-profile
(+995 files in other folders)
